# lorafusion

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  README.md  compare_configs.py  example_tuning.py  pyproject.toml  requirements.txt  tune_kernels.py
benchmarks_paper/: README.md  __init__.py  bench_lora_kernels.py  bench_multi_gpu.py  bench_transformer_layer.py  gen_sample_distribution.py  parse_main_results.py  prepare_models.py
benchmarks_paper/imbalance_simulator/: __init__.py  main_random_data.py  main_with_datasets.py  proposed_solver.py
benchmarks_paper/plots/: evaluation-fig-1-end-to-end.py  evaluation-fig-3-scaling.py  evaluation-fig-5-kernel-perf.py  evaluation-fig-6-layer-perf.py  evaluation-fig-7-kernel-ncu-profile.py
benchmarks_paper/scripts/: run_all.sh  run_single.sh
benchmarks_paper/scripts/kernel_perf/: 1_bench_kernel.sh  (+2 more)
docs/: development.md  installation.md
lorafusion/: __init__.py
lorafusion/ops/: __init__.py  lora_torch_ref.py  lora_v1.py  multi_lora.py
lorafusion/patch/: __init__.py  patch_lora.py  patch_transformers.py
lorafusion/pipeline_parallel/: __init__.py  baseline_mlora_schedule.py  demo.py  multi_lora_schedule.py  pipe_module.py
lorafusion/simulator/: mono.py  object.py
lorafusion/solver/: __init__.py  proposed_solver.py
lorafusion/train/: __init__.py  training_utils.py
lorafusion/utils/: __init__.py  benchmark.py  click.py  common.py  gradient_checkpointing.py  grouped_bar_chart.py  hf.py  module.py  multi_line_plot.py  pytree.py  stacked_bar_chart.py  testing.py
tools/: tune_kernels.py
(+55 files in other folders)
